424
I attach a simplified testcase (based on the test case send by Eric Torreborre (Thx)
the testcase include a jar with a fragment of lift (need to compile Helpers)
```scala
~$$ cd tmp
~$$ tar -xjf bug-561
~/tmp$$ cd bug-561/
~/tmp/bug-561$$ scalac -version
Scala compiler version 2.7.0-RC2 -- (c) 2002-2008 LAMP/EPFL
~/tmp/bug-561$$ javac MethodReturningEnum.java 
~/tmp/bug-561$$ rm -rf *.class
~/tmp/bug-561$$ javac MethodReturningEnum.java 
~/tmp/bug-561$$ scalac -classpath .:lift-util-light-0.6-SNAPSHOT-2.7.jar Helpers.scala ./ClassExtendingMethodReturningEnum.scala
warning: there were deprecation warnings; re-run with -deprecation for details
warning: there were unchecked warnings; re-run with -unchecked for details
two warnings found
~/tmp/bug-561$$ rm -rf *.class
~/tmp/bug-561$$ rm -rf *.class
~/tmp/bug-561$$ javac MethodReturningEnum.java 
~/tmp/bug-561$$ scalac -classpath .:lift-util-light-0.6-SNAPSHOT-2.7.jar ./ClassExtendingMethodReturningEnum.scala Helpers.scala
./ClassExtendingMethodReturningEnum.scala:2: error: type mismatch;
 found   : java.util.Enumeration[java.lang.Object]
 required: java.util.Enumeration
  def getElements = new java.util.Vector[Object]().elements
                                                   ^
one error found
```

Helpers.scala is very big, 
- I don't know which part impact the compilation, so I don't modify/simplify it
- I comments part that use mapper, and Base64.

to reply to your question
A => Helpers
B => ClassExtendingMethodReturningEnum

Hope that help you
